# bindr

./: Cargo.toml  LICENSE  PROMPT.md  README.md
src/: agent.rs  commands.rs  config.rs  events.rs  llm.rs  main.rs  prompts.rs  session.rs  storage.rs  streaming.rs
src/tools/: capabilities.rs  dispatcher.rs  mod.rs
src/ui/: mod.rs
src/ui/conversation/: commands.rs  composer.rs  history.rs  manager.rs  mod.rs  streaming.rs
