[package]
name = "bindr"
version = "0.0.1"
edition = "2024"
authors = ["Your Name "]
description = "Multi-agent LLM workflow orchestration for builders"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OneDevArmy/bindr"
readme = "README.md"
keywords = ["cli", "llm", "workflow", "ai", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }