[package]
name = "bindr"
version = "0.1.0"
edition = "2024"
authors = ["Your Name "]
description = "Multi-agent LLM workflow orchestration for builders"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OneDevArmy/bindr"
readme = "README.md"
keywords = ["cli", "llm", "workflow", "ai", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }